--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+#
+# JDBC properties
+#
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url =jdbc:mysql://localhost:3306/bank?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=892310912V
 
